<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>nodeflow</artifactId>
        <groupId>thito.nodeflow</groupId>
        <version>2.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <version>2.0</version>

    <artifactId>nodeflow-launcher</artifactId>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <nodeflow.version>2.0.0.0</nodeflow.version>
        <nodeflow.copyright>2021</nodeflow.copyright>
        <nodeflow.discord>https://discord.gg/DquZxC4ZeB</nodeflow.discord>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <delete>
                                    <fileset dir="${project.basedir}/target/" includes="*.jks"/>
                                </delete>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.25</version>
                <executions>
                    <execution>
                        <id>nodeflow-GUI</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <!--                            <jar>${compileOutput}/${project.build.finalName}.jar</jar>-->
                            <outfile>../target/NodeFlow.exe</outfile>
                            <icon>NodeFlow.ico</icon>
                            <classPath>
                                <mainClass>thito.nodeflow.launcher.Main</mainClass>
                            </classPath>
                            <jre>
                                <path>Bundled</path>
                                <bundledJre64Bit>false</bundledJre64Bit>
                                <bundledJreAsFallback>false</bundledJreAsFallback>
                                <minVersion>16</minVersion>
                                <jdkPreference>preferJre</jdkPreference>
                                <runtimeBits>64/32</runtimeBits>
                                <initialHeapSize>1000</initialHeapSize>
                                <maxHeapSize>3000</maxHeapSize>
                                <opts>
                                    <opt>--add-opens</opt>
                                    <opt>java.base/java.lang=ALL-UNNAMED</opt>
                                    <opt>-XX:+AlwaysPreTouch</opt>
                                    <opt>-XX:+DisableExplicitGC</opt>
                                    <opt>-XX:+UseG1GC</opt>
                                    <opt>-XX:+UnlockExperimentalVMOptions</opt>
                                    <opt>-XX:MaxGCPauseMillis=50</opt>
                                    <opt>-XX:G1HeapRegionSize=4m</opt>
                                    <opt>-XX:TargetSurvivorRatio=90</opt>
                                    <opt>-XX:G1NewSizePercent=50</opt>
                                    <opt>-XX:G1MaxNewSizePercent=80</opt>
                                    <opt>-XX:InitiatingHeapOccupancyPercent=10</opt>
                                    <opt>-XX:G1MixedGCLiveThresholdPercent=50</opt>
                                    <!--                                    <opt>-Dprism.vsync=true</opt>-->
                                    <opt>-Dprism.forceGPU=true</opt>
                                    <!--                                    <opt>-Dsun.java2d.opengl=true</opt>-->
                                    <opt>-Dprism.lcdtext=false</opt>
                                    <!--suppress UnresolvedMavenProperty -->
                                    <opt>-Dnodeflow.version=${env.NODEFLOW_VERSION}</opt>
                                </opts>
                            </jre>
                            <singleInstance>
                                <mutexName>NodeFlow</mutexName>
                            </singleInstance>
                            <versionInfo>
                                <fileVersion>${nodeflow.version}</fileVersion>
                                <txtFileVersion>${nodeflow.version}</txtFileVersion>
                                <fileDescription>NodeFlow</fileDescription>
                                <copyright>C</copyright>
                                <productVersion>${nodeflow.version}</productVersion>
                                <txtProductVersion>${nodeflow.version}</txtProductVersion>
                                <productName>NodeFlow</productName>
                                <internalName>NodeFlow</internalName>
                                <originalFilename>NodeFlow.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                    <execution>
                        <id>nodeflow-CLI</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>../target/NodeFlow-CLI.exe</outfile>
                            <icon>NodeFlow.ico</icon>
                            <classPath>
                                <mainClass>thito.nodeflow.launcher.Main</mainClass>
                            </classPath>
                            <singleInstance>
                                <mutexName>NodeFlow</mutexName>
                            </singleInstance>
                            <jre>
                                <bundledJre64Bit>false</bundledJre64Bit>
                                <bundledJreAsFallback>false</bundledJreAsFallback>
                                <minVersion>16</minVersion>
                                <jdkPreference>preferJre</jdkPreference>
                                <runtimeBits>64/32</runtimeBits>
                                <initialHeapSize>1000</initialHeapSize>
                                <maxHeapSize>3000</maxHeapSize>
                                <path>Bundled</path>
                                <opts>
                                    <opt>--add-opens</opt>
                                    <opt>java.base/java.lang=ALL-UNNAMED</opt>
                                    <opt>-XX:+AlwaysPreTouch</opt>
                                    <opt>-XX:+DisableExplicitGC</opt>
                                    <opt>-XX:+UseG1GC</opt>
                                    <opt>-XX:+UnlockExperimentalVMOptions</opt>
                                    <opt>-XX:MaxGCPauseMillis=50</opt>
                                    <opt>-XX:G1HeapRegionSize=4m</opt>
                                    <opt>-XX:TargetSurvivorRatio=90</opt>
                                    <opt>-XX:G1NewSizePercent=50</opt>
                                    <opt>-XX:G1MaxNewSizePercent=80</opt>
                                    <opt>-XX:InitiatingHeapOccupancyPercent=10</opt>
                                    <opt>-XX:G1MixedGCLiveThresholdPercent=50</opt>
                                    <!--                                    <opt>-Dprism.vsync=true</opt>-->
                                    <opt>-Dprism.forceGPU=true</opt>
                                    <!--                                    <opt>-Dsun.java2d.opengl=true</opt>-->
                                    <opt>-Dprism.lcdtext=false</opt>
                                    <!--suppress UnresolvedMavenProperty -->
                                    <opt>-Dnodeflow.version=${env.NODEFLOW_VERSION}</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>${nodeflow.version}</fileVersion>
                                <txtFileVersion>${nodeflow.version}</txtFileVersion>
                                <fileDescription>NodeFlow</fileDescription>
                                <copyright>C</copyright>
                                <productVersion>${nodeflow.version}</productVersion>
                                <txtProductVersion>${nodeflow.version}</txtProductVersion>
                                <productName>NodeFlow</productName>
                                <internalName>NodeFlow</internalName>
                                <originalFilename>NodeFlow.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>keytool-maven-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generateKeyPair</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <keystore>${project.basedir}/target/nodeflow.jks</keystore>
                    <!--suppress UnresolvedMavenProperty -->
                    <storepass>${env.NODEFLOW_STOREPASS}</storepass>
                    <alias>nodeflow</alias>
                    <dname>cn=sunarya-thito.github.io, ou=None, L=Bandung, ST=Washington, o=KudaDev, c=ID</dname>
                    <ext></ext>
                    <validity>365000</validity>
                    <keyalg>DSA</keyalg>
                    <keysize>1024</keysize>
                    <sigalg>SHA1withDSA</sigalg>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.jsign</groupId>
                <artifactId>jsign-maven-plugin</artifactId>
                <version>4.0</version>
                <executions>
                    <execution>
                        <id>sign-gui</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <file>../target/NodeFlow.exe</file>
                            <name>NodeFlow</name>
                            <url>${nodeflow.discord}</url>
                            <keystore>target/nodeflow.jks</keystore>
                            <alias>nodeflow</alias>
                            <!--suppress UnresolvedMavenProperty -->
                            <storepass>${env.NODEFLOW_STOREPASS}</storepass>
                        </configuration>
                    </execution>
                    <execution>
                        <id>sign-cli</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <file>../target/NodeFlow-CLI.exe</file>
                            <name>NodeFlow</name>
                            <url>${nodeflow.discord}</url>
                            <keystore>target/nodeflow.jks</keystore>
                            <alias>nodeflow</alias>
                            <!--suppress UnresolvedMavenProperty -->
                            <storepass>${env.NODEFLOW_STOREPASS}</storepass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jlink</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>thito.nodeflow.launcher.Main</mainClass>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <jlinkImageName>Bundled</jlinkImageName>
                    <builddir>../target</builddir>
                    <launcher>Launcher</launcher>
                    <options>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>java.base/java.util=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
